2012-02-01  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v int] Add abstractions: -fs, fs, fso

	* types-table.scm (-fs, fs, fso): New procs.
	(handle-exception-proc, sel/check, test-m3 check-1): Use ‘fs’.

2012-02-01  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Explicitly use UTF-8 for test database encoding.

	* testing.scm (d/c): For action "create", specify encoding ‘UTF8’.

2012-02-01  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Manage cluster creation and daemon bring-{up,down}.

	* fake-cluster-control: New file.
	* Makefile.am (CTL): New var.
	(EXTRA_DIST): Add fake-cluster-control.
	(check_DATA): Add fake-cluster/postmaster.pid.
	(CLEANFILES): Add fake-cluster.log.
	(fake-cluster/postmaster.pid, check-local, kill-daemon): New targets.
	(clean-local): Depend on ‘kill-daemon’; also, "rm -rf fake-cluster".
	* runtest.in (PGHOST): New var, exported.

2012-01-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v mgr] Add tests for malformed defs.

	* types-table.scm: Import ‘(ice-9 regex)’ procs.
	(handle-exception-proc): New proc.
	(pass-if-exception): New macro.
	(pgtable:exception:malformed-defs): New "exception object".
	(expect-bad-defs): New macro.
	(test-bad-defs): New proc.
	(main): Update expected-count and call ‘test-bad-defs’.

2011-09-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.41 (tag v0.41)

2011-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v mgr] Set ‘sql-quote-auto-E?’ on pgtable-manager creation, maybe.

	* types-table.scm: Import (database postgres-qcons) procs.
	(mgr): If the connection recognizes the runtime parameter
	‘standard_conforming_strings’, display its value and set
	‘sql-quote-auto-E?’.

2011-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[scheme int] Use ‘zero?’ more.

	* basic.scm (test:fnumber-and-friends): Use ‘zero?’.
	(test:asynchronous-retrieval): Likewise.
	* testing.scm (test-report): Likewise.

2011-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v int] Simplify expression in basic.scm.
